v1.0.0 - FlatLaf dark UI, smart plugin/mod manager, system info, version bump